--- a/app/src/main/res/layout/activity_group.xml
+++ b/app/src/main/res/layout/activity_group.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="me.wolszon.groupie.ui.group.GroupActivity">
+    tools:context="me.wolszon.groupie.android.ui.group.GroupActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
