Start GroupActivity on notification click
Also added leaving group menu item and refactored
some code to use GroupState

--- a/app/src/main/res/menu/group_menu.xml
+++ b/app/src/main/res/menu/group_menu.xml
@@ -6,6 +6,10 @@
         android:icon="@drawable/qr_code"
         android:title="@string/invite"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_leave"
+        android:title="@string/leave_group"
+        app:showAsAction="never" />
 
     <!--<item
         android:id="@+id/action_settings"
