--- a/app/src/main/res/layout/group_tab_members.xml
+++ b/app/src/main/res/layout/group_tab_members.xml
@@ -1,5 +1,4 @@
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,10 +6,42 @@
     android:layout_weight="1"
     tools:context="me.wolszon.crowdie.android.ui.group.tabs.members.MembersTab">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/membersList"
-        tools:listitem="@layout/members_list_item"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/membersList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:listitem="@layout/members_list_item" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="No longer want to be here?" />
+
+            <Button
+                android:id="@+id/leaveGroupButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:text="Leave" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
 
 </ScrollView>
