--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
-    <color name="roleSwitch">#FFD54F</color>
-    <color name="block">#F44336</color>
+    <color name="colorPrimary">@color/primary</color>
+    <color name="colorPrimaryDark">@color/primaryDark</color>
+    <color name="colorAccent">@color/secondary</color>
+
+    <color name="primary">#43a047</color>
+    <color name="primaryDark">#00701a</color>
+    <color name="textOnPrimary">#ffffff</color>
+    <color name="secondary">#1976d2</color>
+    <color name="secondaryLight">#63a4ff</color>
+    <color name="secondaryDark">#004ba0</color>
+    <color name="textOnSecondary">#ffffff</color>
+
+    <color name="primaryGradientEnd">#37833b</color>
+    <color name="roleSwitch">#ffd54f</color>
+    <color name="block">#f44336</color>
 </resources>
