--- a/app/src/main/res/drawable/admin_indicator.xml
+++ b/app/src/main/res/drawable/admin_indicator.xml
@@ -1,18 +1,31 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape>
-            <solid android:color="@android:color/background_light" />
-        </shape>
+
+    <item android:drawable="@drawable/member_list_item_background" />
+
+    <item
+        android:gravity="left|top"
+        android:top="-20dp"
+        android:left="-10dp">
+
+            <rotate
+                android:fromDegrees="45"
+                android:toDegrees="-45"
+                android:pivotX="50%"
+                android:pivotY="50%">
+
+                <shape android:shape="rectangle">
+
+                    <solid android:color="@color/block" />
+
+                    <size
+                        android:width="15dp"
+                        android:height="50dp" />
+
+                </shape>
+
+            </rotate>
+
     </item>
 
-    <item android:gravity="left|top" android:top="-20dp" android:left="-10dp">
-        <rotate xmlns:android="http://schemas.android.com/apk/res/android"
-            android:fromDegrees="45" android:toDegrees="-45" android:pivotX="50%" android:pivotY="50%">
-            <shape android:shape="rectangle">
-                <solid android:color="@android:color/holo_red_light" />
-                <size android:width="15dp" android:height="50dp" />
-            </shape>
-        </rotate>
-    </item>
 </layer-list>
 
