--- a/app/src/main/res/drawable/pill_distance.xml
+++ b/app/src/main/res/drawable/pill_distance.xml
@@ -1,8 +1,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@android:color/holo_green_light" />
-    <padding android:left="4sp" android:right="4sp" />
+    <solid android:color="@color/primaryDark" />
+
+    <padding
+        android:left="4sp"
+        android:right="4sp" />
+
     <corners android:radius="2sp" />
 
 </shape>
