--- a/app/src/main/res/layout/members_list_item.xml
+++ b/app/src/main/res/layout/members_list_item.xml
@@ -1,80 +1,62 @@
-<com.daimajia.swipe.SwipeLayout
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/clickableArea"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="8dp"
+    android:background="@drawable/admin_indicator"
+    android:elevation="4dp">
 
-    <LinearLayout
+    <ImageView
+        android:id="@+id/imageView2"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="end"
-        android:gravity="center">
-
-        <ImageView
-            android:id="@+id/suppress"
-            android:background="@color/roleSwitch"
-            android:layout_width="51dp"
-            android:layout_height="match_parent"
-            android:paddingLeft="12dp"
-            android:paddingRight="12dp"
-            android:src="@drawable/ic_star_border"
-            android:visibility="gone"
-            android:contentDescription="@string/suppress" />
-
-        <ImageView
-            android:id="@+id/promote"
-            android:background="@color/roleSwitch"
-            android:layout_width="51dp"
-            android:layout_height="match_parent"
-            android:paddingLeft="12dp"
-            android:paddingRight="12dp"
-            android:src="@drawable/ic_star"
-            android:contentDescription="@string/promote" />
-
-        <ImageView
-            android:id="@+id/block"
-            android:background="@color/block"
-            android:layout_width="51dp"
-            android:layout_height="match_parent"
-            android:paddingLeft="12dp"
-            android:paddingRight="12dp"
-            android:src="@drawable/ic_block"
-            android:contentDescription="@string/block" />
-
-    </LinearLayout>
-
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/clickableArea"
-        android:background="@android:color/background_light"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
         android:padding="16dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:adjustViewBounds="false"
+        android:background="@drawable/ic_map_marker"
+        android:cropToPadding="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="8dp" />
 
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            tools:text="@tools:sample/full_names"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="@tools:sample/full_names"
+        android:layout_marginStart="8dp" />
 
-        <TextView
-            android:id="@+id/status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:fontFamily="sans-serif-medium"
-            android:paddingLeft="4sp"
-            android:paddingRight="4sp"
-            android:background="@drawable/pill_distance"
-            android:textColor="@android:color/holo_green_dark"
-            android:text="1.7KM"
-            app:layout_constraintBaseline_toBaselineOf="@+id/name"
-            app:layout_constraintEnd_toEndOf="parent" />
+    <TextView
+        android:id="@+id/status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-medium"
+        android:paddingLeft="4sp"
+        android:paddingRight="4sp"
+        android:background="@drawable/pill_distance"
+        android:textColor="@color/textOnPrimary"
+        tools:text="@sample/distance"
+        app:layout_goneMarginRight="16dp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/name"
+        app:layout_constraintEnd_toStartOf="@id/actionsButton" />
 
-    </android.support.constraint.ConstraintLayout>
+    <ImageButton
+        android:id="@+id/actionsButton"
+        style="?android:attr/actionOverflowButtonStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</com.daimajia.swipe.SwipeLayout>
+</android.support.constraint.ConstraintLayout>
