--- a/app/src/main/res/layout/activity_group.xml
+++ b/app/src/main/res/layout/activity_group.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0"
-        android:background="@color/secondary"
+        android:background="@color/primary"
         app:itemIconTint="@color/navigation_font_color"
         app:itemTextColor="@color/navigation_font_color"
         app:menu="@menu/group_menu" />
