--- a/app/src/main/res/layout/group_tab_map.xml
+++ b/app/src/main/res/layout/group_tab_map.xml
@@ -24,7 +24,11 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:padding="8dp"
+        android:elevation="4dp"
         android:src="@drawable/gps_following"
+        android:background="@drawable/map_center_button_background"
+        android:tint="@color/textOnSecondary"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
