--- a/app/src/main/res/layout/group_tab_members.xml
+++ b/app/src/main/res/layout/group_tab_members.xml
@@ -1,10 +1,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_weight="1"
-    android:background="@drawable/background_gradient"
     tools:context="me.wolszon.crowdie.android.ui.group.tabs.members.MembersTab">
 
     <LinearLayout
@@ -36,21 +34,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textColor="@color/textOnPrimary"
                 android:text="@string/no_longer_want_to_be_here" />
 
-            <android.support.v7.widget.AppCompatButton
+            <Button
                 android:id="@+id/leaveGroupButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0"
                 android:textColor="@color/block"
-                app:backgroundTint="@android:color/white"
+                android:backgroundTint="@android:color/white"
+                android:elevation="4dp"
                 android:text="@string/leave" />
 
         </LinearLayout>
 
     </LinearLayout>
-
 
 </ScrollView>
